--- a/src/App.css
+++ b/src/App.css
@@ -9,10 +9,11 @@
 
 .homepage-title {
   font-size: 60px;
-  line-height: 1.3;
+  line-height: 1.5;
   text-align: center;
   text-transform: uppercase;
-  text-shadow: 0 0 5px 5px rgba(0, 0, 0, 0.3);
+  margin-top: 170px;
+  /* text-shadow: 0 0 5px 5px rgba(0, 0, 0, 0.3); */
 }
 
 .banner-overlay {
