--- a/src/App.css
+++ b/src/App.css
@@ -34,7 +34,8 @@
 
 .homepage-section-header {
   font-size: 30px;
-  border-left: 7px solid red;
-  padding: 5px 10px;
+  border-left: 7px solid #d81159;
+  padding: 7px 10px;
   margin-top: 30px;
+  /* background-color: #b9d1e9; */
 }
